--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,7 +11,6 @@
 
 set $mod Mod4
 set $alt Mod1
-set $terminal urxvt
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -23,15 +22,19 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+# terminal
+set $terminal urxvt
+
 # font
-font pango:Overpass Semibold 11
+#font pango:Overpass Semibold 11
+font pango:IBM Plex Mono Semibold 9
 
 # window borders
 for_window [class=".*"] title_format "<b>%title</b>"
-for_window [class="^.*"] border pixel 4
+for_window [class="^.*"] border pixel 2
 
 bindsym $mod+o border normal 2
-bindsym $mod+i border pixel 4
+bindsym $mod+i border pixel 2
 
 # colors
 # class                 border  backgr. text    indicator child_border
@@ -44,9 +47,9 @@ client.placeholder      #000000 #080d11 #ffffff #000000   #080d11
 client.background       #ffffff
 
 # gaps
-smart_gaps on
-smart_borders no_gaps
-gaps inner 8
+#smart_gaps on
+#smart_borders no_gaps
+#gaps inner 2
 
 # admin functions
 bindsym $mod+F1 reload
@@ -163,6 +166,10 @@ bindsym $mod+r mode "resize"
 #exec --no-startup-id copyq
 #exec --no-startup-id compton
 #exec --no-startup-id dunst
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 #exec ~/.config/i3/restore.sh &
+
+bar {
+        status_command i3status
+}
