--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -373,105 +373,9 @@ inactive_tab_font_style normal
 
 #: Color scheme {{{
 
-
-#:#** Hybrid Color Scheme **#
-#:foreground #c5c8c6
-#:background #1d1f21
-#:selection_foreground #1d1f21
-#:selection_background #c5c8c6
-#:#: black
-#:color0 #282a2e
-#:color8 #373b41
-#:#: red
-#:color1 #a54242
-#:color9 #cc6666
-#:#: green
-#:color2  #8c9440
-#:color10 #b5bd68
-#:#: yellow
-#:color3  #de935f
-#:color11 #f0c674
-#:#: blue
-#:color4  #5f819d
-#:color12 #81a2be
-#:#: magenta
-#:color5  #85678f
-#:color13 #b294bb
-#:#: cyan
-#:color6  #5e8d87
-#:color14 #8abeb7
-#:#: white
-#:color7  #707880
-#:color15 #c5c8c6
-
-
-
-##** Neutron Color Scheme **#
-#foreground #e6e8ef
-#background #1c1e22
-##?cursorColor #f6f7ec
-#selection_foreground #1c1e22
-#selection_background #e6e8ef
-##: black
-#color0 #23252b
-#color8 #23252b
-##: red
-#color1 #b54036
-#color9 #b54036
-##: green
-#color2  #5ab977
-#color10 #5ab977
-##: yellow
-#color3  #deb566
-#color11 #deb566
-##: blue
-#color4  #6a7c93
-#color12 #6a7c93
-#: magenta
-#color5  #a5799d
-#color13 #a5799d
-##: cyan
-#color6  #3f94a8
-#color14 #3f94a8
-##: white
-#color7  #e6e8ef
-#color15 #ebedf2
-##?bold color #52606b
-
-
-
-#** Neutron Color Scheme **#
-foreground #abb2bf
-background #282c34
-#?cursorColor #f6f7ec
-selection_foreground #282c34
-selection_background #abb2bf
-#: black
-color0 #2c323c
-color8 #55606d
-#: red
-color1 #e06c75
-color9 #af5f5f
-#: green
-color2  #87af87
-color10 #87af87
-#: yellow
-color3  #d7afaf
-color11 #ff875f
-#: blue
-color4  #6e88a6
-color12 #6e88a6
-#: magenta
-color5  #d18ec2
-color13 #8787af
-#: cyan
-color6  #5fafaf
-color14 #5fafaf
-#: white
-color7  #abb2bf
-color15 #eceff4
-#?bold color #52606b
-
+#: Kitty-Snazzy Theme
+#: https://github.com/connorholyday/kitty-snazzy
+include snazzy.conf
 
 #: The foreground and background colors
 
@@ -547,7 +451,7 @@ allow_remote_control no
 #: content of windows, etc. Note that this even works over ssh
 #: connections.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
