--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,12 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-#: font_family      monospace
-#: bold_font        auto
-#: italic_font      auto
-#: bold_italic_font auto
-
-font_family		Fira Code
+font_family		Menlo
+#font_family	Fira Code
 bold_font		auto
 italic_font		auto
 bold_italic_font	auto
