added tmux config and vanilla oh-my-zsh zshrc file

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
+#: Menlo Font
+#: https://www.typewolf.com/site-of-the-day/fonts/menlo<Paste>
 font_family		Menlo
+
 #font_family	Fira Code
 bold_font		auto
 italic_font		auto
