--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -129,6 +129,12 @@ bindsym $mod+$alt+Down resize grow height 2 px or 2 ppt
 bindsym $mod+$alt+Up resize shrink height 2 px or 2 ppt
 bindsym $mod+$alt+Right resize grow width 2 px or 2 ppt
 
+# startup additional applications
+exec_always --no-startup-id xrandr --output eDP-1 --mode 1920x1200
+
+# initialize wallpaper
+exec_always --no-startup-id ~/.fehbg
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
