Set ~/.aliasrc vi filetype declaration to zsh

--- a/shell/.aliasrc
+++ b/shell/.aliasrc
@@ -1,13 +1,7 @@
 # =============================================================================
+#
 # ~/.aliasrc
+#
 # =============================================================================
 
-# ls
-
-
-# apt
-alias aptfu='sudo apt update && sudo apt upgrade'
-
-
-
-
+# vi:syntax=zsh
