--- a/shell/.aliasrc
+++ b/shell/.aliasrc
@@ -4,4 +4,20 @@
 #
 # =============================================================================
 
+# ---------------------------------------------------------
+# color output
+# ---------------------------------------------------------
+alias ls='ls --color=auto'
+alias grep='grep --color=auto'
+alias fgrep='fgrep --color=auto'
+alias egrep='egrep --color=auto'
+alias diff='diff --color=auto'
+
+# ---------------------------------------------------------
+# ls
+# ---------------------------------------------------------
+alias l='ls -CF'
+alias la='ls -A'
+alias ll='ls -lA'
+
 # vi:syntax=zsh
