--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,3 +4,8 @@
 # Symlink target: ~/.tmux.conf
 # ==========================================================
 
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
