--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,3 +18,9 @@ unbind %
 # reload config file
 bind r source-file ~/.tmux.conf
 
+# switch panes using Alt+[vim-bind] (without prefix)
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
